jobtracker and tasktracker was added

--- a/test/hadoop.conf
+++ b/test/hadoop.conf
@@ -6,3 +6,9 @@ url=file:jmx/datanode-cdh4.1.json
 
 [HBaseRegionServer]
 url=file:jmx/hbase-regionserver-cdh4.1.json
+
+[TaskTracker]
+url=file:jmx/tasktracker-cdh4.1.json
+
+[JobTracker]
+url=file:jmx/jobtracker-cdh4.1.json
